deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel-app
  ports:
    - name: http
      port: 80
      targetPort: 8888
